<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp">

    <TextView
        android:textColor="@color/colorBlueHcube"
        android:text="@string/se_connecter"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pseudo_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_pseudo_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:textColorLink="@color/colorBlueHcube" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password_log"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorLink="@color/colorBlueHcube" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/se_connecter"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:background="@color/colorBlueHcube"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>
    <Button
        android:background="@color/colorBlueHcube"
        android:id="@+id/btn_send_to_register"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/s_inscrire"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:textSize="14sp"
        android:textColor="@color/colorWhite"/>
    <ProgressBar
        android:id="@+id/pb_loader"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>