<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp">

    <TextView
        android:textColor="@color/colorBlueHcube"
        android:text="@string/s_inscrire"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_pseudo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_pseudo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nom_nom_d_entreprise"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:singleLine="true"
            android:textColorLink="@color/colorBlueHcube" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/votre_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textColorLink="@color/colorBlueHcube" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mot_de_passe"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorLink="@color/colorBlueHcube" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBlueHcube">

        <EditText
            android:id="@+id/et_password2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmez_votre_mot_de_passe"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorLink="@color/colorBlueHcube" />

    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_gravity="center">

        <RadioButton
            android:id="@+id/rb_entreprise"
            android:layout_marginBottom="5dp"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Entreprise"
            android:gravity="center"
            android:checked="true"
            android:background="@color/colorTransparentWhite"
            android:layout_gravity="center"
            android:textColor="@color/colorBlueHcube"
            android:buttonTint="@color/colorBlueHcube"/>

        <RadioButton
            android:id="@+id/rb_talent"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="Talent"
            android:gravity="center"
            android:layout_gravity="center"
            android:background="@color/colorTransparentWhite"
            android:buttonTint="@color/colorBlueHcube"
            android:textColor="@color/colorBlueHcube"/>
    </RadioGroup>

    <Button
        android:id="@+id/btn_send"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/valider"
        android:layout_width="140dp"
        android:layout_height="25dp"
        android:background="@color/colorBlueHcube"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>
    <ProgressBar
        android:id="@+id/pb_loader"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>